# rusty-schema-diff

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: README.md  index.html
src/: analyzer.rs  error.rs  lib.rs  migration.rs  report.rs  schema.rs
src/analyzer/: json_schema.rs  openapi.rs  openapi_test.rs  protobuf.rs  sql.rs
src/analyzer/json_schema/: tests.rs
src/analyzer/openapi/: tests.rs
src/analyzer/protobuf/: tests.rs
src/analyzer/sql/: tests.rs
